--- a/app/src/main/res/layout/content_color_world.xml
+++ b/app/src/main/res/layout/content_color_world.xml
@@ -8,14 +8,32 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/WHITE"
     tools:showIn="@layout/activity_color_world">
 
     <ImageView
         android:id="@+id/startView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/stars"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:layout_alignParentTop="true"
+        android:background="@color/BLACK"
+        android:foregroundGravity="center_horizontal"
+        android:src="@drawable/star"
         android:onClick="changeMyColor"
     />
+
+
+    <TextView
+        android:id="@+id/starColorName"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        android:text="BLACK"
+        android:gravity="center"
+        android:textSize="40dp"
+        android:textStyle="bold"
+        android:background="@color/WHITE"
+        />
 
 </RelativeLayout>
