--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
     <color name="colorAccent">#FF4081</color>
     <color name="BLACK">#000000</color>
     <color name="WHITE">#FFFFFF</color>
+    <color name="GREEN">#00FF00</color>
+    <color name="BLUE">#0000FF</color>
+    <color name="RED">#FF0000</color>
+    <color name="YELLOW">#ffff00</color>
 </resources>
